quartz/components/styles/homeworklist.scss
active-homeworks {
    font-family: var(--headerFont);

    p {
        padding: 0;
        margin: 0;
    }

    .homework-list {
        padding: 0 8px 8px 8px;
        margin: 12px 0 0 0;

        border-radius: 8px;
        background: var(--lightgray);
        max-height: 300px;
        overflow: scroll;

        &>.title {
            box-sizing: border-box;

            position: sticky;
            top: 0;
            padding: 8px 2px;

            width: 100%;
            background: var(--lightgray);

            display: flex;
            align-items: center;

            background-clip: text !important;
            background: linear-gradient(140deg, #D2A8FF 1.09%, #F778BA 32.58%, #FF7B72 44.96%);

            i, h1 {
                -webkit-text-fill-color: transparent;
                color: transparent;
                background: none;

                font-family: var(--headerFont);
                font-weight: 800;
            }

            i {
                font-size: 1.75rem;
                margin-right: 8px;

                // TODO: fix this to work properly on chromium-based browsers.
                //       for some reason, chromium-based browsers when you have a 'text-fill-color' set to transparent
                //       will not render if the 'transform' property is used in keyframes, huh, weird.
                -moz-animation: hourglass-anim 2s infinite ease-in-out;
            }

            h1 {
                margin: 0;
            }
        }

        .homework-item {
            list-style: none;
            background: var(--highlight);

            display: flex;
            flex-direction: column;

            cursor: pointer;

            padding: 12px;
            margin-top: 8px;
            border-radius: 8px;

            .title {
                font-size: 1.05rem;
                font-weight: 800;
                color: var(--secondary);
            }

            .metadata {
                display: flex;
                line-height: 1;
                justify-content: space-between;
                flex-grow: 0;
                font-size: 14px;

                .deadline {
                    font-size: 14px;
                    font-weight: 600;
                    color: var(--secondary);
                }

                .subject {
                    font-size: 14px;
                    color: var(--gray);
                }
            }
        }

        .no-homework {
            width: 100%;
            min-height: 100px;

            display: flex;
            align-items: center;
            justify-content: center;

            font-size: 1.1rem;
            font-weight: 800;
        }
    }

}

@keyframes hourglass-anim {
    0% {
        transform: rotateZ(0);
    }

    25% {
        transform: rotateZ(0);
    }

    50% {
        transform: rotateZ(180deg);
    }

    75% {
        transform: rotateZ(360deg);
    }

    100% {
        transform: rotateZ(360deg);
    }
}

